修复modify