@@ -1,10 +1,11 @@
 package ict.minesunshineone.birthday;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
+import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -51,7 +52,33 @@ public class BirthdayCommand implements CommandExecutor, TabCompleter {
             }
             case "modify" -> {
                 if (player.hasPermission("birthday.modify")) {
-                    gui.openBirthdayGUI(player);
+                    if (args.length < 4) {
+                        player.sendMessage(Component.text("用法: /birthday modify <玩家名> <月> <日>").color(NamedTextColor.RED));
+                        return true;
+                    }
+                    String targetName = args[1];
+                    Player targetPlayer = Bukkit.getPlayer(targetName);
+                    if (targetPlayer == null) {
+                        player.sendMessage(Component.text("找不到玩家: " + targetName).color(NamedTextColor.RED));
+                        return true;
+                    }
+
+                    try {
+                        int month = Integer.parseInt(args[2]);
+                        int day = Integer.parseInt(args[3]);
+
+                        if (!isValidDate(month, day)) {
+                            player.sendMessage(Component.text("无效的日期！").color(NamedTextColor.RED));
+                            return true;
+                        }
+
+                        plugin.getPlayerDataManager().saveBirthday(targetPlayer, month, day);
+                        player.sendMessage(Component.text("已将 " + targetPlayer.getName() + " 的生日设置为 " + month + "月" + day + "日")
+                                .color(NamedTextColor.GREEN));
+
+                    } catch (NumberFormatException e) {
+                        player.sendMessage(Component.text("月份和日期必须是数字！").color(NamedTextColor.RED));
+                    }
                 } else {
                     player.sendMessage(Component.text("你没有权限修改生日信息！").color(NamedTextColor.RED));
                 }
@@ -75,21 +102,36 @@ public class BirthdayCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        if (args.length == 1) {
-            List<String> completions = new ArrayList<>();
-            completions.add("set");
-            completions.add("check");
-            if (sender.hasPermission("birthday.modify")) {
-                completions.add("modify");
-            }
-            if (sender.hasPermission("birthday.admin")) {
-                completions.add("reload");
-            }
-            return completions.stream()
-                    .filter(s -> s.startsWith(args[0].toLowerCase()))
-                    .collect(Collectors.toList());
+        if (!sender.hasPermission("birthday.modify")) {
+            return Collections.emptyList();
         }
-        return Collections.emptyList();
+
+        return switch (args.length) {
+            case 1 ->
+                List.of("set", "check", "modify", "reload").stream()
+                .filter(s -> s.startsWith(args[0].toLowerCase()))
+                .collect(Collectors.toList());
+            case 2 ->
+                args[0].equalsIgnoreCase("modify")
+                ? Bukkit.getOnlinePlayers().stream()
+                .map(Player::getName)
+                .filter(name -> name.toLowerCase().startsWith(args[1].toLowerCase()))
+                .collect(Collectors.toList()) : Collections.emptyList();
+            case 3 ->
+                args[0].equalsIgnoreCase("modify")
+                ? IntStream.rangeClosed(1, 12)
+                .mapToObj(String::valueOf)
+                .filter(s -> s.startsWith(args[2]))
+                .collect(Collectors.toList()) : Collections.emptyList();
+            case 4 ->
+                args[0].equalsIgnoreCase("modify")
+                ? IntStream.rangeClosed(1, 31)
+                .mapToObj(String::valueOf)
+                .filter(s -> s.startsWith(args[3]))
+                .collect(Collectors.toList()) : Collections.emptyList();
+            default ->
+                Collections.emptyList();
+        };
     }
 
     private void showHelpMessage(Player player) {
@@ -123,5 +165,19 @@ public class BirthdayCommand implements CommandExecutor, TabCompleter {
                     .color(NamedTextColor.RED));
             plugin.getLogger().severe(String.format("获取玩家生日信息时发生错误: %s", e.getMessage()));
         }
+    }
+
+    private boolean isValidDate(int month, int day) {
+        if (month < 1 || month > 12) {
+            return false;
+        }
+        return switch (month) {
+            case 2 ->
+                day >= 1 && day <= 28;
+            case 4, 6, 9, 11 ->
+                day >= 1 && day <= 30;
+            default ->
+                day >= 1 && day <= 31;
+        };
     }
 }
